--- a/app/src/main/res/layout/activity_tip_calculator.xml
+++ b/app/src/main/res/layout/activity_tip_calculator.xml
@@ -116,4 +116,21 @@
             android:text="Calculate" />
     </LinearLayout>
 
+    <TextView
+        android:id="@+id/tvTotalPayable"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAlignment="textEnd"
+        android:textStyle="bold"
+        android:layout_marginTop="24dp"
+        android:textSize="24sp"
+        android:text="TextView" />
+
+    <Button
+        android:id="@+id/btnShowReceipt"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/teal_700"
+        android:text="Receipt" />
+
 </LinearLayout>
