--- a/app/src/main/res/layout/activity_intent_examples.xml
+++ b/app/src/main/res/layout/activity_intent_examples.xml
@@ -43,4 +43,14 @@
         app:layout_constraintEnd_toStartOf="@+id/btnCall"
         app:layout_constraintStart_toEndOf="@+id/btnDial"
         app:layout_constraintTop_toBottomOf="@+id/tvContactNumber" />
+
+    <Button
+        android:id="@+id/btnLinkedIn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="64dp"
+        android:text="Show LinkedIn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnShowDialog" />
 </androidx.constraintlayout.widget.ConstraintLayout>
