--- a/app/src/main/res/layout/activity_intent_examples.xml
+++ b/app/src/main/res/layout/activity_intent_examples.xml
@@ -53,4 +53,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnShowDialog" />
+
+    <ImageView
+        android:id="@+id/ivShowOnMap"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="32dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnLinkedIn"
+        app:srcCompat="@android:drawable/ic_dialog_map" />
 </androidx.constraintlayout.widget.ConstraintLayout>
